# miaou

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.cast2gif  KNOWN_ISSUES.md  README.md  TODO_MIAOU.md  debug_mouse_tracking.sh  dune-project  miaou-core.opam  miaou-driver-matrix.opam  miaou-driver-sdl.opam  miaou-driver-term.opam  miaou-runner.opam  miaou-tui.opam  miaou-widgets-display-sdl.opam  miaou.opam  test_ctrl_c.sh  test_mouse_cleanup.sh  test_space_bug.ml  test_with_debug.sh
example/: demo.ml  demo_lib.ml  demo_sdl.ml  demo_tui.ml  dune  mock_system.ml  system_metrics.ml  system_monitor_sdl.ml  tutorial_modal.ml
example/demos/bar_chart/: dune
example/demos/braille/: README.md  dune  main.ml  page.ml
example/demos/breadcrumbs/: dune
example/demos/button/: dune
example/demos/card_sidebar/: README.md  dune  main.ml  page.ml
example/demos/checkbox/: dune
example/demos/description_list/: dune
example/demos/flex_layout/: dune
example/demos/image/: README.md  dune  main.ml  page.ml
example/demos/key_handling/: dune
example/demos/layout_helpers/: dune
example/demos/line_chart/: dune
example/demos/link/: dune
example/demos/logger/: dune
example/demos/pager/: README.md  dune  main.ml  page.ml
example/demos/palette/: dune
example/demos/qr_code/: README.md  dune  main.ml  page.ml
example/demos/radio/: dune
example/gallery/: dune  launcher.ml  main_sdl.ml  main_tui.ml
example/modals/: dune  file_browser_modal.ml  poly_select_modal.ml  select_modal.ml  textbox_modal.ml
example/shared/: dune  mock_logger.ml  system_monitor_sdl.ml
src/: dune  (+1 more)
src/miaou_core/: dune  html_driver.ml  keys.ml  lambda_term_driver.ml  lib_tui.ml  modal_manager.ml  modal_manager.mli  narrow_modal.ml  sdl_driver.ml  tui_capture.ml  tui_driver.ml
(+169 files in other folders)
