(library
 (name miaou_example)
 (modules
  mock_system
  mock_service_lifecycle
  mock_logger
  mock_net
  mock_palette)
 (libraries miaou))

(library
 (name miaou_demo_lib)
 (modules demo_lib)
 (wrapped false)
 (libraries miaou miaou_example))

(include_subdirs no)

(executable
 (name demo_tui)
 (public_name miaou.demo)
 (package miaou)
 (modules demo_tui)
 (libraries miaou_demo_lib miaou))

(executable
 (name demo_sdl)
 (public_name miaou.demo-sdl)
 (package miaou)
 (modules demo_sdl)
 (libraries miaou_demo_lib miaou.runner.native))
