; Legacy demo library - will be replaced by gallery/
(library
 (name miaou_demo_lib)
 (modules demo_lib)
 (wrapped false)
 (libraries demo_shared demo_modals miaou miaou.lib_miaou_internal tsdl tsdl-ttf eio))

(executable
 (name demo_tui)
 (public_name miaou.demo)
 (package miaou)
 (modules demo_tui)
 (libraries miaou_demo_lib miaou miaou.runner.tui miaou.helpers eio_main))

(executable
 (name demo_sdl)
 (public_name miaou.demo-sdl)
 (package miaou)
 (modules demo_sdl)
 (libraries miaou_demo_lib miaou.runner.native miaou.helpers eio_main))
